unpackaged/main/default/objects/Ad_Product__c/Ad_Product__c.object-meta.xml
<CustomObject>
    <label>Ad Product</label>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Ad Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>