unpackaged/main/default/objects/Ad_Product__c/fields/Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Id__c</fullName>
    <description>US-0007908 [Ads 2020] Migrate DFP Batch Process to Hive</description>
    <externalId>true</externalId>
    <inlineHelpText>For GAM, this is the line item GAM ID. For Callisto, this is the Salesforce Line Item ID</inlineHelpText>
    <label>GAM/HIVE Line Item ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>