unpackaged/main/default/objects/Ad_Product__c/fields/Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Name__c</fullName>
    <description>US-0009349</description>
    <formula>Product2__r.Name &amp; &quot;_&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Name</label>
    <type>Text</type>
</CustomField>