unpackaged/main/default/objects/Ad_Product__c/fields/Ad_Name_old__c.field-meta.xml
<CustomField>
    <fullName>Ad_Name_old__c</fullName>
    <description>US-0009349</description>
    <label>Ad Name (old)</label>
    <type>TextArea</type>
</CustomField>