unpackaged/main/default/objects/Ad_Product__c/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <description>US-0009350 - [Ads 2020] EU Floor Price/Ad Type/Priority Requirements</description>
    <label>Ad Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>