unpackaged/main/default/objects/Ad_Product__c/fields/additional_Billing_information_2__c.field-meta.xml
<CustomField>
    <fullName>additional_Billing_information_2__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>additional Billing information 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>