unpackaged/main/default/objects/Ad_Product__c/fields/AdOpsComments__c.field-meta.xml
<CustomField>
    <fullName>AdOpsComments__c</fullName>
    <label>Ad Ops Comments</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>