unpackaged/main/default/objects/Ad_Product__c/fields/Adserver_Adv_Advertiser_ID__c.field-meta.xml
<CustomField>
    <fullName>Adserver_Adv_Advertiser_ID__c</fullName>
    <label>Adserver Adv. (Advertiser ID)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>