unpackaged/main/default/objects/Ad_Product__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>AE % (R)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>