unpackaged/main/default/objects/Ad_Product__c/fields/AE_chk__c.field-meta.xml
<CustomField>
    <fullName>AE_chk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009260 - [Ads 2020] OLI Trigger to QLI/AP, Fields &amp; Syncing</description>
    <label>AE</label>
    <type>Checkbox</type>
</CustomField>