unpackaged/main/default/objects/Ad_Product__c/fields/Amount_Net2eBay__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net2eBay__c</fullName>
    <description>US-0010166 - Relaunching Ads revenue fields</description>
    <inlineHelpText>Discounted amount less agency commission if present</inlineHelpText>
    <label>Amount Net2eBay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>