unpackaged/main/default/objects/Ad_Product__c/fields/Amount_Net_Net_Net__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net_Net_Net__c</fullName>
    <description>US-0009226 - [Ads 2020] Account Turnover</description>
    <label>Amount Net/Net/Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>