unpackaged/main/default/objects/Ad_Product__c/fields/Amount_Net_Net_Net_Number__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net_Net_Net_Number__c</fullName>
    <description>Work around for Rollup Summary limitations with Advanced Currency Management: https://help.salesforce.com/articleView?id=000334299&amp;type=1&amp;mode=1</description>
    <formula>Amount_Net_Net_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Net Net Net Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>