unpackaged/main/default/objects/Ad_Product__c/fields/AttributionType__c.field-meta.xml
<CustomField>
    <fullName>AttributionType__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution type associated with 1PD</description>
    <inlineHelpText>Please select the most appropriate only</inlineHelpText>
    <label>Attribution type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller / Store</fullName>
            </value>
            <value>
                <fullName>Landingpage</fullName>
            </value>
            <value>
                <fullName>Custom item list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>