unpackaged/main/default/objects/Ad_Product__c/fields/avg_Delivery__c.field-meta.xml
<CustomField>
    <fullName>avg_Delivery__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals
US-0010272 - Relaunching Ads revenue fields Part 3

IF (Days_Delivered2__c &gt; 0, FLOOR(Delivered_Sum_Daily__c / Days_Delivered2__c), 0)</description>
    <formula>FLOOR(Delivered_Sum_Daily__c / MAX(Days_delivered__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>avg Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>