unpackaged/main/default/objects/Ad_Product__c/fields/avg_Delivery_DFA__c.field-meta.xml
<CustomField>
    <fullName>avg_Delivery_DFA__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <formula>IF (Days_Delivered2__c &gt; 0, FLOOR( Delivered_Sum_DFA_Daily__c / Days_Delivered2__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>avg Delivery (DFA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>