unpackaged/main/default/objects/Ad_Product__c/fields/avg_Delivery_Test__c.field-meta.xml
<CustomField>
    <fullName>avg_Delivery_Test__c</fullName>
    <description>US-0009161 - [Ads 2020] Migrate Formulas from Revenue 2 to Ad Product</description>
    <formula>IF (Days_Delivered2__c &gt; 0, FLOOR(Delivered_Sum_Daily__c / Days_Delivered2__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>avg Delivery (Test)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>