unpackaged/main/default/objects/Ad_Product__c/fields/avg_Gross_DFA__c.field-meta.xml
<CustomField>
    <fullName>avg_Gross_DFA__c</fullName>
    <formula>IF (Days_Delivered2__c &gt; 0, FLOOR( Delivered_Gross_DFA_Daily__c / Days_Delivered2__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>avg Gross (DFA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>