unpackaged/main/default/objects/Ad_Product__c/fields/Billing_Category__c.field-meta.xml
<CustomField>
    <fullName>Billing_Category__c</fullName>
    <label>Billing Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>CPM</fullName>
                <default>true</default>
                <label>CPM</label>
            </value>
            <value>
                <fullName>ServiceFee</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>Fix Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>