unpackaged/main/default/objects/Ad_Product__c/fields/Booked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Booked_Quantity__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Booked Quantity (R)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>