unpackaged/main/default/objects/Ad_Product__c/fields/Callisto_Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Callisto_Ad_Id__c</fullName>
    <label>Callisto Ad ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>