unpackaged/main/default/objects/Ad_Product__c/fields/Callisto_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Callisto_Campaign_Id__c</fullName>
    <label>Callisto Campaign ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>