unpackaged/main/default/objects/Ad_Product__c/fields/Callisto_Clicks_Recorded_LT__c.field-meta.xml
<CustomField>
    <fullName>Callisto_Clicks_Recorded_LT__c</fullName>
    <label>Callisto Clicks Recorded LT</label>
    <summarizedField>Ad_Revenue_Daily__c.X3rd_Party_Clicks__c</summarizedField>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>