unpackaged/main/default/objects/Ad_Product__c/fields/Clicks_Recorded_LT__c.field-meta.xml
<CustomField>
    <fullName>Clicks_Recorded_LT__c</fullName>
    <description>US-0009161 - [Ads 2020] Migrate Formulas from Revenue 2 to Ad Product</description>
    <label>Clicks Recorded (LT)</label>
    <summarizedField>Ad_Revenue_Daily__c.Clicks_Recorded__c</summarizedField>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>