unpackaged/main/default/objects/Ad_Product__c/fields/ClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>ClonedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Ad_Product__c</referenceTo>
    <relationshipLabel>Ad_Product</relationshipLabel>
    <relationshipName>Ad_Product</relationshipName>
    <type>Lookup</type>
</CustomField>