unpackaged/main/default/objects/Ad_Product__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>Content</label>
    <referenceTo>Content__c</referenceTo>
    <relationshipLabel>Ad Products (Content)</relationshipLabel>
    <relationshipName>Ad_Products</relationshipName>
    <type>Lookup</type>
</CustomField>