unpackaged/main/default/objects/Ad_Product__c/fields/CPM_Net__c.field-meta.xml
<CustomField>
    <fullName>CPM_Net__c</fullName>
    <description>US-0009260 - [Ads 2020] OLI Trigger to QLI/AP, Fields &amp; Syncing</description>
    <label>CPM Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>