unpackaged/main/default/objects/Ad_Product__c/fields/CPM_Net_Net_Net__c.field-meta.xml
<CustomField>
    <fullName>CPM_Net_Net_Net__c</fullName>
    <description>US-0010272 - Relaunching Ads revenue fields Part 3</description>
    <formula>IF( TEXT(Billing_Category__c)=&quot;CPM&quot;,
ROUND( Amount_Net2eBay__c * 1000 / Quantity__c ,2),
ROUND( Amount_Net2eBay__c / Quantity__c ,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPM Net2eBay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>