unpackaged/main/default/objects/Ad_Product__c/fields/Customer_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_No__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Customer Order No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>