unpackaged/main/default/objects/Ad_Product__c/fields/Days_Delivered2__c.field-meta.xml
<CustomField>
    <fullName>Days_Delivered2__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Days Delivered2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>