unpackaged/main/default/objects/Ad_Product__c/fields/Days_delivered__c.field-meta.xml
<CustomField>
    <fullName>Days_delivered__c</fullName>
    <description>US-0009161 - [Ads 2020] Migrate Formulas from Revenue 2 to Ad Product
US-0010272 - Relaunching Ads revenue fields Part 3

IF (Product_Enddate__c &gt;= TODAY() &amp;&amp; Product_Startdate__c &lt;= TODAY(), TODAY() - Product_Startdate__c , IF ( Product_Enddate__c &lt; TODAY(), Runtime_Days__c , 0))</description>
    <formula>MIN(MAX(TODAY() - from_Date__c, 0), Runtime_Days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>