unpackaged/main/default/objects/Ad_Product__c/fields/Days_left__c.field-meta.xml
<CustomField>
    <fullName>Days_left__c</fullName>
    <description>US-0009161 - [Ads 2020] Migrate Formulas from Revenue 2 to Ad Product</description>
    <formula>Runtime_Days__c - Days_Delivered2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>