unpackaged/main/default/objects/Ad_Product__c/fields/Deals_Banner__c.field-meta.xml
<CustomField>
    <fullName>Deals_Banner__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation : 
Attribution 1PD Deal Banner placement</description>
    <label>Deals Banner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Banner</fullName>
            </value>
            <value>
                <fullName>Middle Banner</fullName>
            </value>
            <value>
                <fullName>Bottom Banner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>