unpackaged/main/default/objects/Ad_Product__c/fields/Deals_Banner_PID__c.field-meta.xml
<CustomField>
    <fullName>Deals_Banner_PID__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation : 
Attribution 1PD Deal Banner PID</description>
    <label>Deals Banner PID</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deals_Banner__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19907</fullName>
            </value>
            <value>
                <fullName>19908</fullName>
            </value>
            <value>
                <fullName>19909</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>