unpackaged/main/default/objects/Ad_Product__c/fields/Delivered_AI_For_SAP__c.field-meta.xml
<CustomField>
    <fullName>Delivered_AI_For_SAP__c</fullName>
    <formula>IF( ISPICKVAL(Billing_Category__c ,&quot;CPC&quot;),IF( Delivered_Clicks__c &gt;= Quantity__c , Quantity__c , Delivered_Clicks__c ),

IF( Delivered_Impressions__c &gt;= Quantity__c , Quantity__c , Delivered_Impressions__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered AI For SAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>