unpackaged/main/default/objects/Ad_Product__c/fields/Delivered_AI_LT__c.field-meta.xml
<CustomField>
    <fullName>Delivered_AI_LT__c</fullName>
    <description>US-0009160 - [Ads 2020] Migrate Trigger &amp; Create Apex Class from Revenue 2 to Ad Product</description>
    <label>Delivered AI (LT)</label>
    <summarizedField>Ad_Revenue_Daily__c.Delivered_AI__c</summarizedField>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>