unpackaged/main/default/objects/Ad_Product__c/fields/Delivered_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Impressions__c</fullName>
    <description>US-0007908 [Ads 2020] Migrate DFP Batch Process to Hive</description>
    <label>Delivered Impressions</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>