unpackaged/main/default/objects/Ad_Product__c/fields/Delivered_Sum_Daily__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Sum_Daily__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Delivered Sum (Daily)</label>
    <summarizedField>Ad_Revenue_Daily__c.Delivered_Sum__c</summarizedField>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>