unpackaged/main/default/objects/Ad_Product__c/fields/Delivered_Sum_DFA_Daily__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Sum_DFA_Daily__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Delivered Sum (DFA Daily)</label>
    <summarizedField>Ad_Revenue_Daily__c.X3rd_Party_AI__c</summarizedField>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>