unpackaged/main/default/objects/Ad_Product__c/fields/Deliverystats_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliverystats_Update_Date__c</fullName>
    <description>Acmatac SEING, US-0007908 [Ads 2020] Migrate DFP Batch Process to Hive.</description>
    <label>Last Deliverystats</label>
    <type>DateTime</type>
</CustomField>