unpackaged/main/default/objects/Ad_Product__c/fields/Differenz_AIs__c.field-meta.xml
<CustomField>
    <fullName>Differenz_AIs__c</fullName>
    <description>US-0009161 - [Ads 2020] Migrate Formulas from Revenue 2 to Ad Product</description>
    <formula>SUM_AI_Daily__c - SUM_AI_Monat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Differenz AIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>