unpackaged/main/default/objects/Ad_Product__c/fields/Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Amount__c</fullName>
    <description>US-0010166 - Relaunching Ads revenue fields</description>
    <inlineHelpText>Amount gross less any discounts</inlineHelpText>
    <label>Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>