unpackaged/main/default/objects/Ad_Product__c/fields/EndReporting__c.field-meta.xml
<CustomField>
    <fullName>EndReporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EndReporting</label>
    <type>Checkbox</type>
</CustomField>