unpackaged/main/default/objects/Ad_Product__c/fields/Event_ID_1PD__c.field-meta.xml
<CustomField>
    <fullName>Event_ID_1PD__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD Event ID</description>
    <inlineHelpText>deals specific</inlineHelpText>
    <label>RPP Event ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>