unpackaged/main/default/objects/Ad_Product__c/fields/External_Quantity_Calculated__c.field-meta.xml
<CustomField>
    <fullName>External_Quantity_Calculated__c</fullName>
    <formula>ExternalQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Quantity Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>