unpackaged/main/default/objects/Ad_Product__c/fields/ExternalQuantity__c.field-meta.xml
<CustomField>
    <fullName>ExternalQuantity__c</fullName>
    <label>External Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>