unpackaged/main/default/objects/Ad_Product__c/fields/First_Impression_Delivered__c.field-meta.xml
<CustomField>
    <fullName>First_Impression_Delivered__c</fullName>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>First Impression Delivered</label>
    <summarizedField>Ad_Revenue_Daily__c.Day_RSD__c</summarizedField>
    <summaryFilterItems>
        <field>Ad_Revenue_Daily__c.Delivered_AI__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>