unpackaged/main/default/objects/Ad_Product__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description>US-0009122 - [Ads 2020] Migrate Fields from Revenue Schedule 2 to Ad Revenue Monthly</description>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>