unpackaged/main/default/objects/Ad_Product__c/fields/Floor_price_v2__c.field-meta.xml
<CustomField>
    <fullName>Floor_price_v2__c</fullName>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>Floor price_v2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>