unpackaged/main/default/objects/Ad_Product__c/fields/FromDateUntilDate_Days__c.field-meta.xml
<CustomField>
    <fullName>FromDateUntilDate_Days__c</fullName>
    <description>US-0010379 - ADS - Bug, Quote cannot be made primary due to size</description>
    <formula>(until_Date__c - from_Date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FromDateUntilDate_Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>