unpackaged/main/default/objects/Ad_Product__c/fields/Is_Revised_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Revised_Quote__c</fullName>
    <formula>Quote_Line_Item__r.Is_Revised_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Revised Quote</label>
    <type>Checkbox</type>
</CustomField>