unpackaged/main/default/objects/Ad_Product__c/fields/IsHavingProduct__c.field-meta.xml
<CustomField>
    <fullName>IsHavingProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHavingProduct</label>
    <type>Checkbox</type>
</CustomField>