unpackaged/main/default/objects/Ad_Product__c/fields/IsInGamOrCallisto__c.field-meta.xml
<CustomField>
    <fullName>IsInGamOrCallisto__c</fullName>
    <description>US-0010555 - ADS - Validation skip on setting AD on Ad product for PVP</description>
    <formula>AND(
    !ISNULL(Product2__c),
    Ad_Id__c != &#39;&#39;,
    OR(
        Product2__r.Callisto__c = false,
        AND(
            Product2__r.Callisto__c = true,
            ISPICKVAL(Opportunity__r.StageName, &#39;Closed Won&#39;) 
        ) 
    )
)</formula>
    <label>IsInGamOrCallisto</label>
    <type>Checkbox</type>
</CustomField>