unpackaged/main/default/objects/Ad_Product__c/fields/IsPendingDfpPush__c.field-meta.xml
<CustomField>
    <fullName>IsPendingDfpPush__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: IsPendingDfpPush||</description>
    <label>IsPendingDfpPush</label>
    <type>Checkbox</type>
</CustomField>