unpackaged/main/default/objects/Ad_Product__c/fields/ItemList_1PD__c.field-meta.xml
<CustomField>
    <fullName>ItemList_1PD__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD related items - Comma separated list of numbers</description>
    <inlineHelpText>Can be used to identify attribution</inlineHelpText>
    <label>Item list</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>