unpackaged/main/default/objects/Ad_Product__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Account || CR - 00521865</description>
    <label>January</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>